--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ test:
     - shell
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --tag $CI_REGISTRY_IMAGE:arm .
+    - docker build --network host --tag $CI_REGISTRY_IMAGE:arm .
     - docker push $CI_REGISTRY_IMAGE:arm
 
 #publish_1:
@@ -55,7 +55,7 @@ test:
 #    - shell
 #  script:
 #    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD $DOCKER_REGISTRY
-#    - docker build --tag $DOCKER_USER/$DOCKER_REPO:arm .
+#    - docker build --network host --tag $DOCKER_USER/$DOCKER_REPO:arm .
 #    - docker push $DOCKER_USER/$DOCKER_REPO:arm
 #    - docker system prune --all --force
 
