--- a/root/defaults/apps.json
+++ b/root/defaults/apps.json
@@ -1,9 +1,45 @@
 {
-    "apps" : [
-        {"name":"Active GitHub Forks","url":"DOMAIN/active-github-forks","icon":"source-fork"},
-        {"name":"Composerize","url":"DOMAIN/composerize","icon":"cog-transfer"},
-        {"name":"DCC","url":"DOMAIN/dcc","icon":"cog-transfer"},
-        {"name":"NGINXConfig.io","url":"DOMAIN/nginxconfig.io","icon":"arrow-decision-outline"},
-        {"name":"Triangulator","url":"DOMAIN/triangulator/","icon":"triangle"}
+    "apps":
+    [
+        {
+            "hostname":"DOMAIN",
+            "port": 80,
+            "name": "Active GitHub Forks",
+            "href": "DOMAIN/active-github-forks",
+            "icon": "source-fork",
+            "status": "red"
+        },
+        {
+            "hostname": "DOMAIN",
+            "port": 80,
+            "name": "Composerize",
+            "href": "DOMAIN/composerize",
+            "icon": "cog-transfer",
+            "status": "red"
+        },
+        {
+            "hostname": "DOMAIN",
+            "port": 80,
+            "name": "Docker Compose Converter",
+            "href": "DOMAIN/dcc",
+            "icon": "cog-transfer",
+            "status": "red"
+        },
+        {
+            "hostname": "DOMAIN",
+            "port": 80,
+            "name": "NGINXConfig.io",
+            "href": "DOMAIN/nginxconfig.io",
+            "icon": "arrow-decision-outline",
+            "status": "red"
+        },
+        {
+            "hostname": "DOMAIN",
+            "port": 80,
+            "name": "Triangulator",
+            "href": "DOMAIN/triangulator/",
+            "icon": "triangle",
+            "status": "red"
+        }
     ]
 }
