Replace icon for tgen in apps.json

--- a/root/defaults/apps.json
+++ b/root/defaults/apps.json
@@ -38,7 +38,7 @@
             "port": 80,
             "name": "tgen",
             "href": "PROTOCOL://DOMAIN/tgen",
-            "icon": "mdi-texture-box",
+            "icon": "texture",
             "status": "red"
         },
         {
