--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,20 +58,20 @@ publish_latest:
     - docker build --network host --tag $DOCKER_USER/$DOCKER_REPO:arm .
     - docker push $DOCKER_USER/$DOCKER_REPO:arm
 
-#publish_latest:
-#  stage: release
-#  image: registry.gitlab.com/gitlab-org/release-cli:latest
-#  tags:
-#    - shell
-#  rules:
-#    - if: $CI_COMMIT_TAG
-#  script:
-#    - echo 'running release_job'
-#    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD $DOCKER_REGISTRY
-#    - docker build --network host --tag $DOCKER_USER/$DOCKER_REPO:arm-$CI_COMMIT_TAG .
-#    - docker push $DOCKER_USER/$DOCKER_REPO:arm-$CI_COMMIT_TAG
-#  release:
-#    name: 'Release $CI_COMMIT_TAG'
-#    description: 'Created using the release-cli $EXTRA_DESCRIPTION'
-#    tag_name: '$CI_COMMIT_TAG'
-#    ref: '$CI_COMMIT_TAG'
+release:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  tags:
+    - shell
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo 'running release_job'
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD $DOCKER_REGISTRY
+    - docker build --network host --tag $DOCKER_USER/$DOCKER_REPO:arm-$CI_COMMIT_TAG .
+    - docker push $DOCKER_USER/$DOCKER_REPO:arm-$CI_COMMIT_TAG
+  release:
+    name: 'Release $CI_COMMIT_TAG'
+    description: 'Created using the release-cli'
+    tag_name: '$CI_COMMIT_TAG'
+    ref: '$CI_COMMIT_TAG'
