ci: Use proxy to reduce traffic

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ stages:
   - build
 
 services:
-  - name: ghcr.io/griefed/gitlab-ci-cd:2.2.9
+  - name: docker.griefed.dev/griefed/gitlab-ci-cd:2.2.9
     alias: docker
 
-image: ghcr.io/griefed/gitlab-ci-cd:2.2.9
+image: docker.griefed.dev/griefed/gitlab-ci-cd:2.2.9
 
 workflow:
   rules:
