--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ stages:
   - build
 
 services:
-  - name: docker.griefed.dev/griefed/gitlab-ci-cd:2.2.12
+  - name: griefed/gitlab-ci-cd:2.2.12
     alias: docker
 
-image: docker.griefed.dev/griefed/gitlab-ci-cd:2.2.12
+image: griefed/gitlab-ci-cd:2.2.12
 
 workflow:
   rules:
